update appsettings.json and delete important infos

--- a/Notepad.WebAPI/appsettings.json
+++ b/Notepad.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "env": "Data Source=DESKTOP-7E4DD1Q;Initial Catalog=NotepadDb;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "prod": "Server=whost.sunucunportal.com\\MSSQLSERVER2022;Database=notepad;User Id=notepad;Password=Cavid@123;TrustServerCertificate=True;"
+    "prod": "Server=whost.sunucunportal.com\\MSSQLSERVER2022;Database=123;User Id=123;Password=123;TrustServerCertificate=True;"
   },
   "Link": {
     "env": "https://localhost:7274",
